syntax = "proto3";
package lbm.vesting.v1beta1;

import "gogoproto/gogo.proto";
import "lbm/base/v1beta1/coin.proto";

option go_package = "github.com/line/lbm-sdk/x/auth/vesting/types";

// Msg defines the bank Msg service.
service Msg {
  // CreateVestingAccount defines a method that enables creating a vesting
  // account.
  rpc CreateVestingAccount(MsgCreateVestingAccount) returns (MsgCreateVestingAccountResponse);
}

// MsgCreateVestingAccount defines a message that enables creating a vesting
// account.
message MsgCreateVestingAccount {
  option (gogoproto.equal) = true;

  string   from_address                 = 1 [(gogoproto.moretags) = "yaml:\"from_address\""];
  string   to_address                   = 2 [(gogoproto.moretags) = "yaml:\"to_address\""];
  repeated lbm.base.v1beta1.Coin amount = 3
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/line/lbm-sdk/types.Coins"];

  int64 end_time = 4 [(gogoproto.moretags) = "yaml:\"end_time\""];
  bool  delayed  = 5;
}

// MsgCreateVestingAccountResponse defines the Msg/CreateVestingAccount response type.
message MsgCreateVestingAccountResponse {}
